Initial commit for HDReplay

--- a/HDReplay/doc/abstract/hdreplay.tex
+++ b/HDReplay/doc/abstract/hdreplay.tex
@@ -130,7 +130,10 @@ All MPI-functions are stored inside a hashtable. The key of the hashtable is the
 name of the function and the value is a pointer to the function taking the
 necessary parameters.\\
 The replay function iterates over the list generated out of the trace file. In
-each iteration the function takes the next MPI-function out of the  
+each iteration the function takes the next MPI-function out of the
+
+\section{Performance measuring}
+  
 
 \end{small}
 \end{document}
